wdm-reactive-chart/templates/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  selector:
    component: gateway
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      component: gateway
  template:
    metadata:
      labels:
        component: gateway
    spec:
      containers:
        - name: gateway
          image: enriquebarba97/wdm-reactive:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "2"
            requests:
              memory: "1Gi"
              cpu: "2"
          command: ["gunicorn"]
          args: ["--timeout", "120", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:5000", "gateway.app:app"]
          ports:
            - containerPort: 5000
