wdm-reactive-chart/templates/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 defaultBackend:
  service:
   name: gateway-service
   port:
    number: 5000
